# Electrical-Schematics

./: .gitignore  AGENT_QUICK_REFERENCE.md  ARCHITECT_COORDINATION_SUMMARY.md  AUTO_LOADER.md  AUTO_PLACEMENT_ACCURACY_TEST.md  AUTO_PLACEMENT_ACTION_PLAN.md  AUTO_PLACEMENT_ARCHITECTURE.md  AUTO_PLACEMENT_DIAGNOSTIC.md  AUTO_PLACEMENT_DIAGNOSTIC_DETAILED.md  AUTO_PLACEMENT_FINAL_REPORT.md  AUTO_PLACEMENT_FIX.md  AUTO_PLACEMENT_ITERATIONS.json  AUTO_PLACEMENT_TEST_SUMMARY.md  CHANGES.md  CLAUDE.md  CONTACT_POSITIONING_FIX.md  CONTACT_POSITIONING_IMPLEMENTATION.md  CRITICAL_FIXES.md  DELIVERABLES.md  DIGIKEY_CONFIG_FIX.md  DIGIKEY_ENRICHMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  ICON_FUNCTIONALITY_TEST_REPORT.md  ICON_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_SIMULATION.md  MANUAL_ANNOTATION_GUIDE.md  PARTS_ENRICHMENT.md  PARTS_EXTRACTION_REPORT.md  PARTS_LIST_EXTRACTION_REPORT.md  PLC_INPUT_STATE_README.md  QA_TEST_REPORT.md  QUICK_START.md  README.md  STARTUP_TROUBLESHOOTING.md  SUMMARY.md  TAG_COUNTING_README.md  TAG_COUNT_DELIVERABLES.md  TAG_COUNT_REPORT.json  (+69 more)
docs/: PLC_INPUT_STATE.md
electrical_schematics/: __init__.py  main.py
examples/: README.md  analyze_drawer_diagram.py  example_usage.py  interactive_simulation_test.py  plc_input_state_demo.py  terminal_strip_demo.py  test_auto_loader.py  test_digikey_api.py  test_icon_functionality.py  test_parts_enrichment.py  visual_overlay_test.py
tests/: __init__.py  test_asset_downloader.py  test_auto_enrichment.py  test_component_library.py  test_component_position_finder.py  test_contact_parser.py  test_diagnostics.py  test_dynamic_icon_generator.py  test_flow_analyzer.py  test_iec_60497_contacts.py  test_industrial_models.py  test_library_models.py  test_models.py  test_ocr_parts_extractor.py  test_parts_import_service.py  test_plc_input_state.py  (+3 more)
(+71 files in other folders)
