[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["electrical_schematics*"]
exclude = ["tests*", "examples*"]

[project]
name = "electrical-schematics"
version = "0.1.0"
description = "Desktop application for analyzing industrial wiring diagrams and diagnostics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Liam O'Reilly"}
]
dependencies = [
    "PySide6>=6.6.0",
    "networkx>=3.2",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "PyMuPDF>=1.23.0",  # PDF rendering and text extraction
    "Pillow>=10.0.0",   # Image handling
    "fastapi>=0.109.0", # Local API proxy server
    "uvicorn>=0.27.0",  # ASGI server for FastAPI
    "httpx>=0.26.0",    # Async HTTP client for FastAPI
    "requests>=2.31.0", # HTTP client for proxy client
    "requests-oauthlib>=1.3.1", # OAuth2 support for DigiKey
    "pytesseract>=0.3.10",  # Tesseract OCR wrapper
    "pdf2image>=1.16.0",    # PDF to image conversion for OCR
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
electrical_schematics = "electrical_schematics.main:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
